# AlgoTrading_TWSCPP

./: .gitignore  CMakeLists.txt  LICENSE  MyWrapper.h  OrderUtils.cpp  OrderUtils.h  README.md  backtest.ipynb  cpp_latency_results_20250713_160237.json  main.cpp  quick_order_test.py  requirements.txt  run_latency_test.py  run_trading_system.py  test_live_trading.py
config/: pairs_config.yaml  risk_config.yaml  trading_config.yaml
cpp/: CMakeLists.txt  run_tests.bat  test_zeromq.cpp
cpp/config/: trading_config.json
cpp/include/: config_manager.h  logger.h  order_manager.h  position_tracker.h  risk_checker.h  signal_parser.h  signal_watcher.h  simple_json_parser.h  validation.h
cpp/src/: main.cpp
cpp/src/comms/: signal_parser.cpp  signal_watcher.cpp
cpp/src/order_exec/: order_manager.cpp  position_tracker.cpp  risk_checker.cpp
cpp/src/tws_integration/: MyWrapper.cpp  MyWrapper.h  OrderUtils.cpp  OrderUtils.h
cpp/tests/: integration_test.cpp  latency_measurement_test.cpp  mock_tws_wrapper.h  unit_tests.cpp
python/: main_data_engine.py
python/comms/: message_protocol.py  signaler.py
python/data_engine/: data_processor.py  market_data_stream.py
python/monitoring/: logging_config.py  performance_tracker.py
python/strategy/: kalman_filter.py
tests/: latency_measurement_test.py
tests/python/: run_python_tests.py  test_kalman_filter.py  test_zeromq_communication.py
